# bumpi

./: CHANGELOG.md  LICENSE  README.md  bumpi.cabal  get-next-version.cabal  get-next-version2.cabal
app/: Main.hs
libs/: Cli.hs
libs/Cli/: Sample.hs
src/: App.hs  AppM.hs  Cli.hs  Config.hs  LogM.hs  Utils.hs  Version.hs
src/Cli/: Sample.hs
src/Monad/: App.hs  Config.hs  Log.hs  Version.hs
