cabal-version:      2.4
name:               bumpi
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            GNU GPLv3
author:             Enrico Scherlies
maintainer:         e.scherlies@pm.me

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable bumpi
  hs-source-dirs:   
    app
    src
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Cli
    Version

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  ghc-options:
    -Wall 
    -Wcompat 
    -Widentities 
    -Wincomplete-record-updates 
    -Wincomplete-uni-patterns 
    -Wmissing-home-modules 
    -Wpartial-fields 
    -Wredundant-constraints 
    -threaded 
    -rtsopts 
    -with-rtsopts=-N
  default-extensions:
      OverloadedStrings
  build-depends:    
      base ^>=4.16.3.0
    , process
    , text
    , ghc
  default-language: Haskell2010

library
  exposed-modules:
      Cli
      Version
  hs-source-dirs:
      src
  default-extensions:
      OverloadedStrings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base ^>=4.16.3.0
    , process
    , text
    , ghc
  default-language: Haskell2010